# deeplx

./: .gitignore  Cargo.toml
configs/: config.toml
crates/biz/: Cargo.toml
crates/biz/src/: translate.rs
crates/conf/: Cargo.toml
crates/conf/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: translate.rs
crates/pkgs/: Cargo.toml
crates/pkgs/src/: error.rs  lib.rs
crates/routes/: Cargo.toml
crates/routes/src/: lib.rs  middleware.rs  state.rs  translate.rs
src/: main.rs
